@@ -12,69 +12,104 @@ import java.util.regex.Pattern;
 
 public class EmployeeController {
     private static EmployeeController instance;
-
     final EmployeeBo employeeservice = new EmployeeBoImpl();
 
-    private EmployeeController(){}
+    private EmployeeController() {}
 
-    public static EmployeeController getInstance(){
-        return instance==null?instance= new EmployeeController():instance;
+    public static EmployeeController getInstance() {
+        return instance == null ? instance = new EmployeeController() : instance;
     }
 
-    public String GenerateId(){
+    public String GenerateId() {
         List<Employee> list = employeeservice.getEmployee();
-        list.sort((employee1,employee2) -> {
+        list.sort((employee1, employee2) -> {
             int id1 = Integer.parseInt(employee1.getId().split("Emp")[1]);
             int id2 = Integer.parseInt(employee2.getId().split("Emp")[1]);
             return Integer.compare(id1, id2);
         });
-        int id = list.isEmpty() ?1:Integer.parseInt((list.getLast().getId().split("Emp",2)[1]))+1;
-        return "Emp"+id;
+        int id = list.isEmpty() ? 1 : Integer.parseInt((list.get(list.size() - 1).getId().split("Emp")[1])) + 1;
+        return "Emp" + id;
     }
 
-    public void AddEmployee(String name,String email, String address, String password,String checkpassword,String phone){
+    public void AddEmployee(String id, String name, String email, String address, String password, String phone) {
+        if (!validateEmployeeData(name, email, address, password, phone)) {
+            return;
+        }
 
-        Pattern ppassword= Pattern.compile("^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!])(?=\\S+$).{8,}$");
-        Matcher mpassword = ppassword.matcher(password);
-        Pattern pemail= Pattern.compile("^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$");
-        Matcher memail = pemail.matcher(email);
-
-        if(name.isEmpty()){
-            new Alert(Alert.AlertType.ERROR,"Enter a Name!").showAndWait();
-        }
-        else if(phone.length()!=10){
-            new Alert(Alert.AlertType.ERROR,"Phone number is incorrect").showAndWait();
-        }
-        else if(phone.charAt(0)!='0'){
-            new Alert(Alert.AlertType.ERROR,"Phone number is incorrect").showAndWait();
-        }
-        else if (!memail.matches()){
-            new Alert(Alert.AlertType.ERROR,"Inncorrect Email").showAndWait();
-        }
-        else if (address.isEmpty()) {
-            new Alert(Alert.AlertType.ERROR,"Enter an Address").showAndWait();
-        }
-        else if(password.length()<8){
-            new Alert(Alert.AlertType.ERROR,"Password is Small").showAndWait();
-        }
-        else if (!mpassword.matches()) {
-            new Alert(Alert.AlertType.ERROR,"Password must contain at least one of '!@#$%^&*' and one of numeric").showAndWait();
-        }
-        else if (!password.equals(checkpassword)) {
-            new Alert(Alert.AlertType.ERROR,"Password doesn't match").showAndWait();
-        }
-        else {
-            String id = GenerateId();
-            if(employeeservice.addEmployee(new Employee(id, name, phone, email, address, new Encryptor().encryptString(password)))){
-                new Alert(Alert.AlertType.INFORMATION,"Employee added Successfully!").showAndWait();
-            }
-            else{
-                new Alert(Alert.AlertType.ERROR,"Employee didn't added Successfully!").showAndWait();
-            }
+        Employee employee = new Employee(id, name, phone, email, address, new Encryptor().encryptString(password));
+        if (employeeservice.addEmployee(employee)) {
+            new Alert(Alert.AlertType.INFORMATION, "Employee added Successfully!").showAndWait();
+        } else {
+            new Alert(Alert.AlertType.ERROR, "Employee didn't add Successfully!").showAndWait();
         }
     }
 
-    public List<Employee> GetEmployee(){
+    public void updateEmployee(String id, String name, String email, String address, String password, String phone) {
+        if (!validateEmployeeData(name, email, address, password, phone)) {
+            return;
+        }
+
+        Employee employee = new Employee(id, name, phone, email, address,
+                password.isEmpty() || password.equals("*****") ? getEmployee(id).getPassword() : new Encryptor().encryptString(password));
+
+        if (employeeservice.updateEmployee(employee)) {
+            new Alert(Alert.AlertType.INFORMATION, "Employee updated Successfully!").showAndWait();
+        } else {
+            new Alert(Alert.AlertType.ERROR, "Failed to update employee!").showAndWait();
+        }
+    }
+
+    public boolean deleteEmployee(String id) {
+        Employee employee = getEmployee(id);
+        if (employee != null) {
+            return employeeservice.deleteEmployee(employee);
+        }
+        return false;
+    }
+
+    public List<Employee> getEmployee() {
         return employeeservice.getEmployee();
+    }
+
+    public Employee getEmployee(String id) {
+        return employeeservice.search(id);
+    }
+
+    private boolean validateEmployeeData(String name, String email, String address, String password, String phone) {
+        Pattern ppassword = Pattern.compile("^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!])(?=\\S+$).{8,}$");
+        Pattern pemail = Pattern.compile("^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$");
+
+        if (name.isEmpty()) {
+            new Alert(Alert.AlertType.ERROR, "Enter a Name!").showAndWait();
+            return false;
+        }
+        if (!phone.isEmpty() && (phone.length() != 10 || phone.charAt(0) != '0')) {
+            new Alert(Alert.AlertType.ERROR, "Phone number is incorrect").showAndWait();
+            return false;
+        }
+        if (!pemail.matcher(email).matches()) {
+            new Alert(Alert.AlertType.ERROR, "Incorrect Email").showAndWait();
+            return false;
+        }
+        if (address.isEmpty()) {
+            new Alert(Alert.AlertType.ERROR, "Enter an Address").showAndWait();
+            return false;
+        }
+        if (password.isEmpty()||password.equals("")) {
+            new Alert(Alert.AlertType.ERROR, "Empty Password").showAndWait();
+            return false;
+        }else{
+            if (password.length() < 8) {
+                new Alert(Alert.AlertType.ERROR, "Password is too short").showAndWait();
+                return false;
+            }
+            if (!ppassword.matcher(password).matches()) {
+                new Alert(Alert.AlertType.ERROR,
+                        "Password must contain at least one number, one lowercase letter, " +
+                                "one uppercase letter, and one special character").showAndWait();
+                return false;
+            }
+        }
+        return true;
     }
 }
